[tool.poetry]
name = "superstore-bi-dashboard"
version = "1.0.0"
description = "Superstore BI and Sales Forecasting Dashboard"
authors = ["Mohanad Ahmed <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]

python = ">=3.12"
streamlit = "1.51.0"
pandas = "2.3.3"
numpy = "1.26.4"
plotly = "6.5.0"
scikit-learn = "1.7.2"
statsmodels = "0.14.6"
prophet = "1.3.0"
xgboost = "3.1.2"
openpyxl = "3.1.2"
pyyaml = "^6.0.1"
pyarrow = "21.0.0"
lightgbm = ">=4.0.0"
joblib = ">=1.3.0"
matplotlib = ">=3.8.0"
wordcloud = ">=1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


